unpackaged/main/default/objects/Case/fields/Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Flow_Status__c</fullName>
    <label>Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New-Case Created</fullName>
            </value>
            <value>
                <fullName>Reimburement Under Review</fullName>
            </value>
            <value>
                <fullName>Reimburement Approved</fullName>
            </value>
            <value>
                <fullName>Reimburesment Declined</fullName>
            </value>
            <value>
                <fullName>Roof Review Required</fullName>
            </value>
            <value>
                <fullName>Roof Review Pending Site Visit</fullName>
            </value>
            <value>
                <fullName>Re-Roof Required Pending Quote</fullName>
            </value>
            <value>
                <fullName>Customer Accepted- Pending Coordination</fullName>
            </value>
            <value>
                <fullName>Re-Roof Underway</fullName>
            </value>
            <value>
                <fullName>Re-Roof Complete- Pending JCO</fullName>
            </value>
            <value>
                <fullName>Roof Complete- Ready for invoice</fullName>
            </value>
            <value>
                <fullName>Roof Reviewed- Re-Roof Not Needed</fullName>
            </value>
            <value>
                <fullName>Electrical Review Required</fullName>
            </value>
            <value>
                <fullName>Electrical Review Pending Site Visit</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade Required Pending Quote</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade Pending Utility Disconnect</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade Scheduled</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade at Installation</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade Complete</fullName>
            </value>
            <value>
                <fullName>Electrical Reviewed- No Upgrade Required</fullName>
            </value>
            <value>
                <fullName>Structural Review Required</fullName>
            </value>
            <value>
                <fullName>Structural Review Pending Site Visit</fullName>
            </value>
            <value>
                <fullName>Structural Upgrade Required Pending Quote</fullName>
            </value>
            <value>
                <fullName>Structural Upgrade Scheduled</fullName>
            </value>
            <value>
                <fullName>Structural Upgrade at Installation</fullName>
            </value>
            <value>
                <fullName>Structural Upgrade Complete</fullName>
            </value>
            <value>
                <fullName>Structural Reviewed- No Upgrade Needed</fullName>
            </value>
            <value>
                <fullName>Trenching Review Required</fullName>
            </value>
            <value>
                <fullName>Trenching Review Pending Site Visit</fullName>
            </value>
            <value>
                <fullName>Trenching Required Pending Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>