unpackaged/main/default/objects/Case/fields/Follow_Up_Service_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Service_Call_Date__c</fullName>
    <description>Follow up service call date</description>
    <label>Follow Up Service Call Date</label>
    <type>Date</type>
</CustomField>