unpackaged/main/default/objects/Case/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <label>Form ID #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>