unpackaged/main/default/objects/Case/fields/Full_DQ_date__c.field-meta.xml
<CustomField>
    <fullName>Full_DQ_date__c</fullName>
    <label>Full DQ date</label>
    <type>Date</type>
</CustomField>