unpackaged/main/default/objects/Case/fields/Full_Roof_Square__c.field-meta.xml
<CustomField>
    <fullName>Full_Roof_Square__c</fullName>
    <label>Full Roof Square</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>