unpackaged/main/default/objects/Case/fields/Google_Yelp_Review__c.field-meta.xml
<CustomField>
    <fullName>Google_Yelp_Review__c</fullName>
    <label>Google/Yelp Review</label>
    <type>Date</type>
</CustomField>