unpackaged/main/default/objects/Case/fields/Ground_Mount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ground_Mount_Notes__c</fullName>
    <label>Ground Mount Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>