unpackaged/main/default/objects/Case/fields/Hard_Quote_Solar_MPS__c.field-meta.xml
<CustomField>
    <fullName>Hard_Quote_Solar_MPS__c</fullName>
    <label>Hard Quote Solar MPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>