unpackaged/main/default/objects/Case/fields/HIC_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>HIC_Incentive_Amount__c</fullName>
    <label>HIC Incentive Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>