unpackaged/main/default/objects/Case/fields/HIC_Loan_Portal_Match__c.field-meta.xml
<CustomField>
    <fullName>HIC_Loan_Portal_Match__c</fullName>
    <label>HIC &amp; Loan Portal Match</label>
    <type>TextArea</type>
</CustomField>