unpackaged/main/default/objects/Case/fields/HIC_Sent__c.field-meta.xml
<CustomField>
    <fullName>HIC_Sent__c</fullName>
    <label>HIC Sent</label>
    <type>TextArea</type>
</CustomField>