unpackaged/main/default/objects/Case/fields/HIC_Signed__c.field-meta.xml
<CustomField>
    <fullName>HIC_Signed__c</fullName>
    <label>HIC Signed</label>
    <type>TextArea</type>
</CustomField>