unpackaged/main/default/objects/Case/fields/HOA_Disclosure_form__c.field-meta.xml
<CustomField>
    <fullName>HOA_Disclosure_form__c</fullName>
    <label>HOA Disclosure form</label>
    <type>Date</type>
</CustomField>