unpackaged/main/default/objects/Case/fields/HOA_Issues__c.field-meta.xml
<CustomField>
    <fullName>HOA_Issues__c</fullName>
    <label>HOA Issues</label>
    <type>Date</type>
</CustomField>