unpackaged/main/default/objects/Case/fields/HOA_Notified__c.field-meta.xml
<CustomField>
    <fullName>HOA_Notified__c</fullName>
    <label>HOA Notified</label>
    <type>TextArea</type>
</CustomField>