unpackaged/main/default/objects/Case/fields/HOA_Redesign__c.field-meta.xml
<CustomField>
    <fullName>HOA_Redesign__c</fullName>
    <label>HOA Redesign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>