unpackaged/main/default/objects/Case/fields/Home_Renovation__c.field-meta.xml
<CustomField>
    <fullName>Home_Renovation__c</fullName>
    <label>Home Renovation</label>
    <type>Date</type>
</CustomField>