unpackaged/main/default/objects/Case/fields/Homeowner_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Expectations__c</fullName>
    <label>Homeowner Expectations</label>
    <type>Date</type>
</CustomField>