unpackaged/main/default/objects/Case/fields/Homeowner_Obligation_Electrical__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Obligation_Electrical__c</fullName>
    <label>Homeowner Obligation- Electrical</label>
    <type>Date</type>
</CustomField>