unpackaged/main/default/objects/Case/fields/Homeowner_Obligation_Roof__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Obligation_Roof__c</fullName>
    <label>Homeowner Obligation- Roof</label>
    <type>Date</type>
</CustomField>