unpackaged/main/default/objects/Case/fields/Homeowner_Obligation_Site_Condition__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Obligation_Site_Condition__c</fullName>
    <label>Homeowner Obligation- Site Condition</label>
    <type>Date</type>
</CustomField>