unpackaged/main/default/objects/Case/fields/Homeowner_Obligation_Tree__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Obligation_Tree__c</fullName>
    <label>Homeowner Obligation- Tree</label>
    <type>Date</type>
</CustomField>