unpackaged/main/default/objects/Case/fields/Homeowners_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Homeowners_Insurance__c</fullName>
    <label>Homeowners Insurance</label>
    <type>Date</type>
</CustomField>