unpackaged/main/default/objects/Case/fields/How_likely_to_recommend__c.field-meta.xml
<CustomField>
    <fullName>How_likely_to_recommend__c</fullName>
    <label>would recommend?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>