unpackaged/main/default/objects/Case/fields/ICA_Application__c.field-meta.xml
<CustomField>
    <fullName>ICA_Application__c</fullName>
    <label>ICA Application</label>
    <type>Date</type>
</CustomField>