unpackaged/main/default/objects/Case/fields/ICA_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ICA_Approved_Date__c</fullName>
    <formula>Opportunity__r.Signed_NMA_Rec_d_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Approved Date</label>
    <type>Date</type>
</CustomField>