unpackaged/main/default/objects/Case/fields/ICA_document_to_upload_Affidavit__c.field-meta.xml
<CustomField>
    <fullName>ICA_document_to_upload_Affidavit__c</fullName>
    <label>ICA document to upload : Affidavit</label>
    <type>Date</type>
</CustomField>