unpackaged/main/default/objects/Case/fields/ICA_Notified__c.field-meta.xml
<CustomField>
    <fullName>ICA_Notified__c</fullName>
    <label>ICA Notified Date</label>
    <type>Date</type>
</CustomField>