unpackaged/main/default/objects/Case/fields/Illness__c.field-meta.xml
<CustomField>
    <fullName>Illness__c</fullName>
    <label>Illness</label>
    <type>Date</type>
</CustomField>