unpackaged/main/default/objects/Case/fields/Incentive_Denied__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Denied</label>
    <type>Checkbox</type>
</CustomField>