unpackaged/main/default/objects/Case/fields/Incentive_Document__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Document__c</fullName>
    <label>Incentive Document</label>
    <type>Date</type>
</CustomField>