unpackaged/main/default/objects/Case/fields/Incentive_Document_to_sign__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Document_to_sign__c</fullName>
    <label>Incentive Document to sign</label>
    <type>Date</type>
</CustomField>