unpackaged/main/default/objects/Case/fields/Incentive_Document_Upload_Voided_Check__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Document_Upload_Voided_Check__c</fullName>
    <label>Incentive Document Upload: Voided Check</label>
    <type>Date</type>
</CustomField>