unpackaged/main/default/objects/Case/fields/Incorrect_Measurements__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Measurements__c</fullName>
    <label>Incorrect Measurements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>