unpackaged/main/default/objects/Case/fields/Incorrect_Panel_Count__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Panel_Count__c</fullName>
    <label>Incorrect Panel Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>