unpackaged/main/default/objects/Case/fields/Incorrectly_odeled__c.field-meta.xml
<CustomField>
    <fullName>Incorrectly_odeled__c</fullName>
    <label>Incorrectly Modeled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>