unpackaged/main/default/objects/Case/fields/Inelgible_Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Inelgible_Roof_Type__c</fullName>
    <label>Inelgible Roof Type</label>
    <type>Date</type>
</CustomField>