unpackaged/main/default/objects/Case/fields/Ineligible_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Property_Type__c</fullName>
    <label>Ineligible Property Type</label>
    <type>Date</type>
</CustomField>