unpackaged/main/default/objects/Case/fields/Ineligible_Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Roof_Type__c</fullName>
    <label>Ineligible Roof Type</label>
    <type>Date</type>
</CustomField>