unpackaged/main/default/objects/Case/fields/Inspection_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete_Date__c</fullName>
    <formula>Opportunity__r.Inspection_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Complete Date</label>
    <type>Date</type>
</CustomField>