unpackaged/main/default/objects/Case/fields/Inspection_Pass_Document__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Pass_Document__c</fullName>
    <label>Inspection Pass Document</label>
    <type>Date</type>
</CustomField>