unpackaged/main/default/objects/Case/fields/Install_Photos__c.field-meta.xml
<CustomField>
    <fullName>Install_Photos__c</fullName>
    <label>Install Photos</label>
    <type>Date</type>
</CustomField>