unpackaged/main/default/objects/Case/fields/Install_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Start_Date__c</fullName>
    <label>Install Start Date</label>
    <type>Date</type>
</CustomField>