unpackaged/main/default/objects/Case/fields/Internal_Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Internal_Access_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Access Required</label>
    <type>Checkbox</type>
</CustomField>