unpackaged/main/default/objects/Case/fields/Internet_Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Internet_Connection_Type__c</fullName>
    <label>Internet Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>wifi</fullName>
            </value>
            <value>
                <fullName>hard line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>