unpackaged/main/default/objects/Case/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>Inventory</label>
    <type>Date</type>
</CustomField>