unpackaged/main/default/objects/Case/fields/Inverter_1__c.field-meta.xml
<CustomField>
    <fullName>Inverter_1__c</fullName>
    <formula>TEXT (Opportunity__r.Inverter_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inverter 1</label>
    <type>Text</type>
</CustomField>