unpackaged/main/default/objects/Case/fields/Inverter_2__c.field-meta.xml
<CustomField>
    <fullName>Inverter_2__c</fullName>
    <formula>TEXT ( Opportunity__r.Inverter_2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inverter 2</label>
    <type>Text</type>
</CustomField>