unpackaged/main/default/objects/Case/fields/Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Link__c</fullName>
    <label>Invoice Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>