unpackaged/main/default/objects/Case/fields/Invoice_sent_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_sent_to_customer__c</fullName>
    <label>Invoice sent to customer</label>
    <type>Date</type>
</CustomField>