unpackaged/main/default/objects/Case/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>Opto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>