unpackaged/main/default/objects/Case/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <formula>TEXT (Job__r.Job_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>