unpackaged/main/default/objects/Case/fields/Layout_Change__c.field-meta.xml
<CustomField>
    <fullName>Layout_Change__c</fullName>
    <label>Layout Change</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>