unpackaged/main/default/objects/Case/fields/Layout_Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Layout_Incorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Revision Complete</label>
    <type>Checkbox</type>
</CustomField>