unpackaged/main/default/objects/Case/fields/Layout_Issue__c.field-meta.xml
<CustomField>
    <fullName>Layout_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Size and Offset Requirements</label>
    <type>Checkbox</type>
</CustomField>