unpackaged/main/default/objects/Case/fields/Learning_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objectives__c</fullName>
    <description>Clearly state what you want the audience to learn by the end of the session(s). This should not be more than three to five brief bullet points unless it is software based (and you’re listing specific functions the audience needs to be able to perform by training’s end).</description>
    <inlineHelpText>Clearly state what you want the audience to learn by the end of the session(s). This should not be more than three to five brief bullet points unless it is software based (and you’re listing specific functions the audience needs to be able to perform by t</inlineHelpText>
    <label>Learning Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>