unpackaged/main/default/objects/Case/fields/Length_of_Trench_Hardscape__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Trench_Hardscape__c</fullName>
    <label>Length of Trench Hardscape</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>