unpackaged/main/default/objects/Case/fields/Lidar_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>Lidar_Unavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lidar Unavailable</label>
    <type>Checkbox</type>
</CustomField>