unpackaged/main/default/objects/Case/fields/Loan_Docs_Sent__c.field-meta.xml
<CustomField>
    <fullName>Loan_Docs_Sent__c</fullName>
    <label>Loan Docs Sent</label>
    <type>TextArea</type>
</CustomField>