unpackaged/main/default/objects/Case/fields/Loan_Docs_Signed__c.field-meta.xml
<CustomField>
    <fullName>Loan_Docs_Signed__c</fullName>
    <label>Loan Docs Signed</label>
    <type>TextArea</type>
</CustomField>