unpackaged/main/default/objects/Case/fields/Loan_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Loan_Reimbursement__c</fullName>
    <label>Loan Reimbursement</label>
    <type>Date</type>
</CustomField>