unpackaged/main/default/objects/Case/fields/Loan_Terms_Change__c.field-meta.xml
<CustomField>
    <fullName>Loan_Terms_Change__c</fullName>
    <label>Loan Terms Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>