unpackaged/main/default/objects/Case/fields/LOI_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Received_Date__c</fullName>
    <label>LOI Received Date</label>
    <type>Date</type>
</CustomField>