unpackaged/main/default/objects/Case/fields/Loss_In_Production__c.field-meta.xml
<CustomField>
    <fullName>Loss_In_Production__c</fullName>
    <label>Loss In Production</label>
    <type>Date</type>
</CustomField>