unpackaged/main/default/objects/Case/fields/Main_Breaker_Size_AMPS__c.field-meta.xml
<CustomField>
    <fullName>Main_Breaker_Size_AMPS__c</fullName>
    <label>Main Breaker Size (AMPS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>