unpackaged/main/default/objects/Case/fields/Main_Panel_Size_AMPS__c.field-meta.xml
<CustomField>
    <fullName>Main_Panel_Size_AMPS__c</fullName>
    <label>Main Panel Size (AMPS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>less than 100</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>125</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>225</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>greater than 400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>