unpackaged/main/default/objects/Case/fields/Main_Panel_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Panel_Type__c</fullName>
    <label>Main Panel Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>