unpackaged/main/default/objects/Case/fields/Main_Panel_Upgrade_Electrical__c.field-meta.xml
<CustomField>
    <fullName>Main_Panel_Upgrade_Electrical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Panel Upgrade(Electrical)</label>
    <type>Checkbox</type>
</CustomField>