unpackaged/main/default/objects/Case/fields/Main_Panel_Upgrade_Required__c.field-meta.xml
<CustomField>
    <fullName>Main_Panel_Upgrade_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Panel Upgrade Required?</label>
    <type>Checkbox</type>
</CustomField>