unpackaged/main/default/objects/Case/fields/Material_Change__c.field-meta.xml
<CustomField>
    <fullName>Material_Change__c</fullName>
    <label>Material Change</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>