unpackaged/main/default/objects/Case/fields/Measurements_Error__c.field-meta.xml
<CustomField>
    <fullName>Measurements_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measurements Error</label>
    <type>Checkbox</type>
</CustomField>