unpackaged/main/default/objects/Case/fields/Meter_Base_and_Surroundings__c.field-meta.xml
<CustomField>
    <fullName>Meter_Base_and_Surroundings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Base and Surroundings</label>
    <type>Checkbox</type>
</CustomField>