unpackaged/main/default/objects/Case/fields/Mortgage_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Statement__c</fullName>
    <label>Mortgage Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>