unpackaged/main/default/objects/Case/fields/MSP_and_Surroundings__c.field-meta.xml
<CustomField>
    <fullName>MSP_and_Surroundings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSP and Surroundings</label>
    <type>Checkbox</type>
</CustomField>