unpackaged/main/default/objects/Case/fields/Net_Meter_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Net_Meter_Application_Approved__c</fullName>
    <formula>Opportunity__r.Net_Meter_Application_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Meter Application Approved</label>
    <type>Date</type>
</CustomField>