unpackaged/main/default/objects/Case/fields/New_1st_Yr_K__c.field-meta.xml
<CustomField>
    <fullName>New_1st_Yr_K__c</fullName>
    <label>New First Year kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>