unpackaged/main/default/objects/Case/fields/New_Engineering_Required__c.field-meta.xml
<CustomField>
    <fullName>New_Engineering_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>new design required by Engineering partner</description>
    <label>New Engineering Required</label>
    <type>Checkbox</type>
</CustomField>