unpackaged/main/default/objects/Case/fields/New_First_Year_kWh__c.field-meta.xml
<CustomField>
    <fullName>New_First_Year_kWh__c</fullName>
    <formula>Job__r.New_First_Year_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New First Year kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>