unpackaged/main/default/objects/Case/fields/New_Solar_Offset1_c__c.field-meta.xml
<CustomField>
    <fullName>New_Solar_Offset1_c__c</fullName>
    <label>New Solar Offset %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>