unpackaged/main/default/objects/Case/fields/New_Solar_Offset__c.field-meta.xml
<CustomField>
    <fullName>New_Solar_Offset__c</fullName>
    <formula>Job__r.New_Solar_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Solar Offset %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>