unpackaged/main/default/objects/Case/fields/Non_Serviceable_AHJ__c.field-meta.xml
<CustomField>
    <fullName>Non_Serviceable_AHJ__c</fullName>
    <label>Non-Serviceable AHJ</label>
    <type>Date</type>
</CustomField>