unpackaged/main/default/objects/Case/fields/Notes_Not_Followed__c.field-meta.xml
<CustomField>
    <fullName>Notes_Not_Followed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notes and Alchemy Input</label>
    <type>Checkbox</type>
</CustomField>