unpackaged/main/default/objects/Case/fields/NPS_Review__c.field-meta.xml
<CustomField>
    <fullName>NPS_Review__c</fullName>
    <label>NPS Review</label>
    <type>Date</type>
</CustomField>