unpackaged/main/default/objects/Case/fields/NPS_Segment__c.field-meta.xml
<CustomField>
    <fullName>NPS_Segment__c</fullName>
    <label>NPS Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>