unpackaged/main/default/objects/Case/fields/NTP_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>NTP_Incomplete__c</fullName>
    <label>NTP Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>