unpackaged/main/default/objects/Case/fields/Number_of_backed_up_loads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_backed_up_loads__c</fullName>
    <label>Number of backed up loads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>