unpackaged/main/default/objects/Case/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <label>Offset</label>
    <type>Date</type>
</CustomField>