unpackaged/main/default/objects/Case/fields/Offset_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Offset_Discrepancy__c</fullName>
    <label>Offset Discrepancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>