unpackaged/main/default/objects/Case/fields/Opp_admin_contact__c.field-meta.xml
<CustomField>
    <fullName>Opp_admin_contact__c</fullName>
    <label>Opp Admin Contact</label>
    <type>Email</type>
</CustomField>