unpackaged/main/default/objects/Case/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>Opportunity__r.X18_Character_Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>